Generate from spec version 1.71.0 - POST scheduled txns
