# src/models/HybridTransaction.ts
@@ -50,7 +50,7 @@ export interface HybridTransaction {
      * @type {string}
      * @memberof HybridTransaction
      */
-    memo?: string;
+    memo?: string | null;
     /**
      * 
      * @type {TransactionClearedStatus}
@@ -68,13 +68,13 @@ export interface HybridTransaction {
      * @type {TransactionFlagColor}
      * @memberof HybridTransaction
      */
-    flag_color?: TransactionFlagColor;
+    flag_color?: TransactionFlagColor | null;
     /**
      * The customized name of a transaction flag
      * @type {string}
      * @memberof HybridTransaction
      */
-    flag_name?: string;
+    flag_name?: string | null;
     /**
      * 
      * @type {string}
@@ -86,55 +86,55 @@ export interface HybridTransaction {
      * @type {string}
      * @memberof HybridTransaction
      */
-    payee_id?: string;
+    payee_id?: string | null;
     /**
      * 
      * @type {string}
      * @memberof HybridTransaction
      */
-    category_id?: string;
+    category_id?: string | null;
     /**
      * If a transfer transaction, the account to which it transfers
      * @type {string}
      * @memberof HybridTransaction
      */
-    transfer_account_id?: string;
+    transfer_account_id?: string | null;
     /**
      * If a transfer transaction, the id of transaction on the other side of the transfer
      * @type {string}
      * @memberof HybridTransaction
      */
-    transfer_transaction_id?: string;
+    transfer_transaction_id?: string | null;
     /**
      * If transaction is matched, the id of the matched transaction
      * @type {string}
      * @memberof HybridTransaction
      */
-    matched_transaction_id?: string;
+    matched_transaction_id?: string | null;
     /**
      * If the transaction was imported, this field is a unique (by account) import identifier.  If this transaction was imported through File Based Import or Direct Import and not through the API, the import_id will have the format: 'YNAB:[milliunit_amount]:[iso_date]:[occurrence]'.  For example, a transaction dated 2015-12-30 in the amount of -$294.23 USD would have an import_id of 'YNAB:-294230:2015-12-30:1'.  If a second transaction on the same account was imported and had the same date and same amount, its import_id would be 'YNAB:-294230:2015-12-30:2'.
      * @type {string}
      * @memberof HybridTransaction
      */
-    import_id?: string;
+    import_id?: string | null;
     /**
      * If the transaction was imported, the payee name that was used when importing and before applying any payee rename rules
      * @type {string}
      * @memberof HybridTransaction
      */
-    import_payee_name?: string;
+    import_payee_name?: string | null;
     /**
      * If the transaction was imported, the original payee name as it appeared on the statement
      * @type {string}
      * @memberof HybridTransaction
      */
-    import_payee_name_original?: string;
+    import_payee_name_original?: string | null;
     /**
      * If the transaction is a debt/loan account transaction, the type of transaction
      * @type {string}
      * @memberof HybridTransaction
      */
-    debt_transaction_type?: HybridTransactionDebtTransactionTypeEnum;
+    debt_transaction_type?: HybridTransactionDebtTransactionTypeEnum | null;
     /**
      * Whether or not the transaction has been deleted.  Deleted transactions will only be included in delta requests.
      * @type {boolean}
@@ -152,7 +152,7 @@ export interface HybridTransaction {
      * @type {string}
      * @memberof HybridTransaction
      */
-    parent_transaction_id?: string;
+    parent_transaction_id?: string | null;
     /**
      * 
      * @type {string}
@@ -164,7 +164,7 @@ export interface HybridTransaction {
      * @type {string}
      * @memberof HybridTransaction
      */
-    payee_name?: string;
+    payee_name?: string | null;
     /**
      * The name of the category.  If a split transaction, this will be 'Split'.
      * @type {string}
